objects/DataUsePurpose.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_NotificationDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_NotificationVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Sequence__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_DataUsePurposes</fullName>
        <filterScope>Everything</filterScope>
        <label>All Data Use Purposes</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>